# TagTracker

./: .gitmodules  CMakeLists.txt  README.md
.github/actions/herelink/: action.yml
.github/actions/qt-android/: action.yml
.github/workflows/: docs.yml  herelink-linux.yml  macos.yml
android/: AndroidManifest.xml  build.gradle
cmake/: Install.cmake
cmake/find-modules/: FindGStreamer.cmake
custom/: CMakeLists.txt  custom.qrc  qgroundcontrol.exclusion  qgroundcontrol.qrc
custom/android/: AndroidManifest.xml  build.gradle  debug.keystore
custom/cmake/: CustomOverrides.cmake
custom/docs/: auto-detection.md  charging-the-battery.md  updating-the-app.md
custom/src/: CMakeLists.txt  CSVLogManager.cc  CSVLogManager.h  ControllerIndicator.qml  Custom.SettingsGroup.json  CustomGuidedActionAutoDetection.qml  CustomGuidedActionAutoTakeoffRotateRTL.qml  CustomGuidedActionDownloadLogs.qml  CustomGuidedActionRawCapture.qml  CustomGuidedActionSendTags.qml  CustomGuidedActionStartRotation.qml  CustomGuidedActionStartStopDetection.qml  CustomGuidedActionStopDetection.qml  CustomLoggingCategory.cc  CustomLoggingCategory.h  CustomOptions.cc  CustomOptions.h  CustomPlugin.cc  CustomPlugin.h  CustomPulseRoseMapItem.qml  CustomSettings.cc  CustomSettings.h  CustomStateMachine.cc  CustomStateMachine.h  DetectorInfo.cc  DetectorInfo.h  DetectorInfoListModel.cc  DetectorList.cc  DetectorList.h  OverrideGuidedActionsController.qml  PulseMapItem.h  PulseMapItem.qml  PulseRoseMapItem.h  RotationInfo.cc  RotationInfo.h  SendTagsHandler.cc  SendTagsHandler.h  SendTagsState.cc  SendTunnelCommandState.cc  SendTunnelCommandState.h  (+11 more)
custom/src/ResourceOverrides/FlightDisplay/: CustomGuidedActionsController.qml  FlyViewAdditionalCustomActionsList.qml  FlyViewCustomLayer.qml  FlyViewToolStrip.qml  FlyViewToolStripActionList.qml
custom/src/StateMachine/: CaptureAtSliceState.cc  CaptureAtSliceState.h  CustomState.cc  CustomState.h  CustomStateMachine.cc  CustomStateMachine.h  DelayState.cc  DelayState.h  ErrorTransition.h  FactWaitForValueTarget.cc  FactWaitForValueTarget.h  FullRotateAndCaptureState.cc  FullRotateAndCaptureState.h  FunctionState.cc  FunctionState.h  GuidedModeCancelledTransition.h  GuidedModeState.cc  GuidedModeState.h  PythonCaptureAtSliceState.cc  PythonCaptureAtSliceState.h  PythonRotateAndCaptureState.cc  PythonRotateAndCaptureState.h  PythonWaitForDetectionResultState.cc  PythonWaitForDetectionResultState.h  RotateAndCaptureState.cc  RotateAndCaptureState.h  RotateAndCaptureStateBase.cc  RotateAndCaptureStateBase.h  RotateAndRateHeartbeatWaitState.cc  RotateAndRateHeartbeatWaitState.h  RotateMavlinkCommandState.cc  RotateMavlinkCommandState.h  SendMavlinkCommandState.cc  SendMavlinkCommandState.h  SendTagsState.cc  SendTagsState.h  SendTunnelCommandState.cc  SendTunnelCommandState.h  SetFlightModeState.cc  SetFlightModeState.h  (+10 more)
src/: QGCApplication.cc
src/API/: QGCCorePlugin.cc  QGCCorePlugin.h
src/Android/: AndroidSerial.cc
src/FactSystem/FactControls/: FactTextFieldGrid.qml
src/FirmwarePlugin/: FirmwarePlugin.h
src/FlightDisplay/: FlyViewAdditionalActionsPanel.qml  GuidedActionsController.qml
src/GPS/: CMakeLists.txt
src/MAVLink/: StatusTextHandler.cc
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/UI/: MainRootWindow.qml
src/UI/toolbar/: FlyViewToolBar.qml
src/Vehicle/: Vehicle.cc
src/Vehicle/VehicleSetup/: Bootloader.cc
src/VideoManager/VideoReceiver/GStreamer/gstqml6gl/: CMakeLists.txt
tools/setup/: install-dependencies-debian.sh
